<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#FFF"
        android:id="@+id/recent_text"
        android:gravity="center"
        android:text="@string/recent" />
    
     <HorizontalScrollView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/recent_text"
         android:id="@+id/scrollView"
         android:scrollbars="none"
         android:layout_marginTop="10sp">
          
	</HorizontalScrollView >
    
    <EditText
        android:id="@+id/name"
        android:hint="@string/send_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollView"
        android:inputType="number" />
    
    <Button
        android:id="@+id/select"
        android:onClick="btClick"
        android:alpha="0.7"
        android:textSize="21sp"
        android:text="@string/select"
        android:contentDescription="@string/desc_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollView"
        android:layout_toRightOf="@id/name"
        android:background="#33CCFF" /> 
        
     <EditText
        android:id="@+id/content"
        android:maxLines="4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:hint="@string/hint" />
     
     <TextView
         android:id="@+id/left"
         android:layout_below="@id/content"
         android:layout_width="15dp"
         android:layout_height="wrap_content"/>
     
     <Button
        android:id="@+id/finish"
        android:onClick="btClick"
        android:alpha="0.7"
        android:textSize="21sp"
        android:text="@string/finish"
        android:contentDescription="@string/desc_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/left"
        android:layout_below="@id/content"
        android:background="#33CCFF" /> 
        
     <Button
        android:id="@+id/send"
        android:onClick="btClick"
        android:alpha="0.7"
        android:background="#33CCFF" 
        android:textSize="21sp"
        android:text="@string/send"
        android:contentDescription="@string/desc_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_below="@id/content"
        android:layout_toRightOf="@id/finish"/>
     
    <TextView
         android:id="@+id/left_1"
         android:layout_below="@id/content"
         android:layout_width="15dp"
         android:layout_height="wrap_content"/>
        
     <CheckBox
         android:paddingLeft="5sp"
         android:alpha="0.7"
         android:gravity="center"
         android:background="#33CCFF" 
         android:id="@+id/Timing"
         android:textColor="#000"
         android:text="@string/SMStimer"
         android:contentDescription="@string/desc_SMStimer"
         android:layout_below="@id/finish"
         android:layout_toRightOf="@id/left_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     
     <Button
        android:id="@+id/timingSms"
        android:onClick="btClick"
        android:alpha="0.7"
        android:background="#33CCFF" 
        android:textSize="21sp"
        android:text="@string/timingSms"
        android:contentDescription="@string/desc_timingSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send"
        android:layout_toRightOf="@id/Timing"/> 
      
</RelativeLayout>