<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#FFF"
        android:id="@+id/textView"
        android:text="@string/hello_world" />
    
    <Button
        android:id="@+id/safeContacts"
        android:alpha="0.7"
        android:onClick="btClick"
        android:text="@string/safeContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="15sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
    
      <Button
        android:id="@+id/safeMessage"
        android:alpha="0.7"
        android:onClick="btClick"
        android:text="@string/safeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/safeContacts"
        android:layout_below="@id/textView"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
      
       <Button
        android:id="@+id/interceptList"
        android:alpha="0.7"
        android:onClick="btClick"
        android:text="@string/interceptList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/safeContacts"
        android:layout_marginTop="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
       
      <Button
        android:id="@+id/trashList"
        android:alpha="0.7"
        android:onClick="btClick"
        android:text="@string/trashList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/interceptList"
        android:layout_below="@id/safeMessage"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
      
      <Button
        android:onClick="btClick"
        android:id="@+id/interceptSetting"
        android:alpha="0.7"
        android:text="@string/interceptSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/interceptList"
        android:layout_marginTop="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
    
      <Button
        android:id="@+id/help"
        android:onClick="btClick"
        android:alpha="0.7"
        android:text="@string/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/interceptSetting"
        android:layout_below="@id/trashList"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
      
      <Button
        android:id="@+id/feedBack"
        android:onClick="btClick"
        android:alpha="0.7"
        android:text="@string/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:layout_below="@id/interceptSetting"    
        android:layout_marginTop="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
    
      <Button
        android:onClick="btClick"
        android:id="@+id/about"
        android:alpha="0.7"
        android:text="@string/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/feedBack"
        android:layout_below="@id/help"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
      
       <Button
        android:id="@+id/exit"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/about"
        android:layout_below="@id/help"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="15sp"
        android:onClick="btClick"
        android:background="#33CCFF" />
      
      <Button
        android:id="@+id/setting"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/help"
        android:layout_above="@id/about"
        android:layout_marginLeft="10sp"
        android:layout_marginBottom="15sp"
        android:onClick="btClick"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" /> 
      
</RelativeLayout>