<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#FFF"
        android:id="@+id/textView"
        android:text="@string/hello_health" />
    
    <Button
        android:id="@+id/bt1"
        android:alpha="0.7"
        android:onClick="btClick"
        android:text="@string/health_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="15sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
    
      <Button
        android:id="@+id/bt2"
        android:alpha="0.7"
        android:onClick="btClick"
        android:text="@string/health_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/bt1"
        android:layout_below="@id/textView"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
      
       <Button
        android:id="@+id/bt3"
        android:alpha="0.7"
        android:onClick="btClick"
        android:text="@string/health_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt1"
        android:layout_marginTop="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
       
      <Button
        android:id="@+id/bt4"
        android:alpha="0.7"
        android:onClick="btClick"
        android:text="@string/health_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/bt3"
        android:layout_below="@id/bt2"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
      
      <Button
        android:onClick="btClick"
        android:id="@+id/bt5"
        android:alpha="0.7"
        android:text="@string/health_family"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt3"
        android:layout_marginTop="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
    
      <Button
        android:id="@+id/bt6"
        android:onClick="btClick"
        android:alpha="0.7"
        android:text="@string/health_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/bt5"
        android:layout_below="@id/bt4"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
      
      <Button
        android:id="@+id/bt7"
        android:onClick="btClick"
        android:alpha="0.7"
        android:text="@string/health_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:layout_below="@id/bt5"    
        android:layout_marginTop="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
    
      <Button
        android:onClick="btClick"
        android:id="@+id/bt8"
        android:alpha="0.7"
        android:text="@string/health_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/bt7"
        android:layout_below="@id/bt6"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
      
       <Button
        android:id="@+id/bt9"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/bt8"
        android:layout_below="@id/bt6"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="15sp"
        android:onClick="btClick"
        android:background="#33CCFF" />
      
      <Button
        android:id="@+id/bt10"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/bt6"
        android:layout_above="@id/bt8"
        android:layout_marginLeft="10sp"
        android:layout_marginBottom="15sp"
        android:onClick="btClick"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" /> 
      
</RelativeLayout>
