<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/miniAdLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginTop="15sp"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:height="100dp"
        android:onClick="btClick"
        android:text="@string/black"
        android:width="120dp" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="15sp"
        android:layout_toRightOf="@id/bt1"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:height="100dp"
        android:onClick="btClick"
        android:text="@string/white"
        android:width="120dp" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt1"
        android:layout_marginTop="5sp"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:height="100dp"
        android:onClick="btClick"
        android:text="@string/help"
        android:width="120dp" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt2"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:layout_toRightOf="@id/bt3"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:height="100dp"
        android:onClick="btClick"
        android:text="@string/about"
        android:width="120dp" />

    <Button
        android:id="@+id/bt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt3"
        android:layout_marginTop="5sp"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:height="100dp"
        android:onClick="btClick"
        android:text="@string/more"
        android:width="120dp" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt4"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:layout_toRightOf="@id/bt5"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:height="100dp"
        android:onClick="btClick"
        android:text="@string/point"
        android:width="120dp" />

    <Button
        android:id="@+id/bt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt5"
        android:layout_marginTop="5sp"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:height="100dp"
        android:onClick="btClick"
        android:text="@string/history"
        android:width="120dp" />

    <Button
        android:id="@+id/bt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt6"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:layout_toRightOf="@id/bt7"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:height="100dp"
        android:onClick="btClick"
        android:text="@string/advance"
        android:width="120dp" />

    <Button
        android:id="@+id/bt9"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_below="@id/bt6"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="15sp"
        android:layout_toRightOf="@id/bt8"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:onClick="btClick" />

    <Button
        android:id="@+id/bt10"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_above="@id/bt8"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="10sp"
        android:layout_toRightOf="@id/bt6"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:height="100dp"
        android:onClick="btClick"
        android:width="120dp" />

</RelativeLayout>