<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".MainActivity" >
    
   <TextView
       android:textColor="#fff"
       android:gravity="center"
       android:id="@+id/text"
       android:textSize="21sp"
       android:text="@string/key"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"/> 
    
    <EditText
        android:textColor="#000"
        android:gravity="center"
        android:layout_marginTop="15sp"
        android:layout_below="@id/text"
        android:id="@+id/value"
        android:hint="@string/value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/> 

    <Button
        android:id="@+id/bt1"
        android:onClick="btClick"
        android:alpha="0.7"
        android:text="@string/add_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_below="@id/value"
        android:background="#33CCFF"
        android:height="100dp" />
    
      <Button
        android:id="@+id/bt2"
        android:onClick="btClick"
        android:alpha="0.7"
        android:text="@string/add_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/bt1"
        android:layout_below="@id/value"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="10sp"
        android:background="#33CCFF"
        android:height="100dp"/>   
      
</RelativeLayout>
