<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <EditText
        android:id="@+id/contact"
        android:hint="@string/contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
     <EditText
        android:id="@+id/msg"
        android:layout_below="@id/contact"
        android:layout_marginTop="15sp"
        android:hint="@string/msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
      
      <Button
        android:id="@+id/bt10"
        android:alpha="0.7"
        android:text="@string/submit"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/msg"
        android:layout_marginTop="15sp"
        android:onClick="btClick"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" /> 
      
</RelativeLayout>